# src/entities/User.ts
@@ -1,4 +1,5 @@
-import { Exclude } from 'class-transformer';
+import 'dotenv/config';
+import { Exclude, Expose } from 'class-transformer';
 import {
   Column,
   CreateDateColumn,
@@ -37,6 +38,14 @@ export class User {
 
   @CreateDateColumn()
   createdAt: Date;
+
+  @Expose({ name: 'avatarUrl' })
+  getAvatarUrl(): string | null {
+    if (!this.avatar) {
+      return null;
+    }
+    return `${process.env.AVATAR_URL}/${this.avatar}`;
+  }
 
   constructor() {
     if (!this.id) {
